--- a/style.scss
+++ b/style.scss
@@ -13,8 +13,9 @@ html {
     padding-right: 160px;
 }
 
+
 header{
-    width: 100%;
+    min-width: 100%;
     display: flex;
     justify-content: center;
     position: fixed;
@@ -1394,5 +1395,625 @@ footer{
 }
 .section5{
     display: none;
+}
+}
+
+@media(max-width: 1024px){
+    .section2{
+        flex-direction: column;
+    }
+    .section2 img{
+        width: 680px;
+    }
+    .section3{
+            width: 900px;
+            flex-wrap: wrap;
+            gap: 30px;
+            width: 100%;
+            div{
+                width: 300px;
+                i{
+                    font-size: 15px;
+                }
+                h3{
+                    font-size: 15px;
+                }
+            }
+        }
+
+        .section4{
+    display: grid;
+    grid-template-columns: 170px 170px 170px;
+    grid-template-rows: auto auto;
+    padding-top: 20px;
+    column-gap: 10px;
+    row-gap: 15px;
+    .img1{
+        width: 170px;
+        grid-column: 1 / 3; 
+        grid-row: 1 / 3; 
+    }
+    .img2{
+        width: 170px;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+    .img3{
+        width: 170px;
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+    }
+    .img4{
+        width: 170px;
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+    .img5{
+        width: 170px;
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
+}
+
+.section5{
+    display: none;
+}
+
+
+.loginandicons .fa-cart-arrow-down{
+            display: none;
+        }
+        header{
+            gap: 40px;
+            width: 900px;
+            background-color: white;
+        }
+        .loginandicons .fa-heart{
+            display: none;
+        }
+        .loginandicons h3{
+            display: none;
+        }
+        .dropdown-button span{
+            display: none;
+        }
+        .dropdown-button{
+            width: 50px;
+            justify-content: center;
+        }
+        .searchcontainer input{
+            display: none;
+        }
+        .searchcontainer i{
+            background-color: #F9F7FD;
+            border: none;
+            color: black;
+        }
+        .searchcontainer{
+            background-color: #F9F7FD;
+            width: 50px;
+        }
+        .number1{
+            padding: 20px 70px;
+            width: 900px;
+        }
+        hr{
+            width: 900px;
+        }
+        .section5h1{
+            display: none;
+        }
+}
+
+
+@media(max-width: 1200px){
+     .section2{
+        flex-direction: column;
+    }
+    .section2 img{
+        width: 900px;
+    }
+    .section3{
+            width: 900px;
+            flex-wrap: wrap;
+            gap: 30px;
+            width: 100%;
+            div{
+                width: 300px;
+                i{
+                    font-size: 15px;
+                }
+                h3{
+                    font-size: 15px;
+                }
+            }
+        }
+
+        .section4{
+    display: grid;
+    grid-template-columns: 250px 250px 250px;
+    grid-template-rows: auto auto;
+    padding-top: 20px;
+    column-gap: 10px;
+    row-gap: 15px;
+    .img1{
+        width: 250px;
+        grid-column: 1 / 3; 
+        grid-row: 1 / 3; 
+    }
+    .img2{
+        width: 250px;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+    .img3{
+        width: 250px;
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+    }
+    .img4{
+        width: 250px;
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+    .img5{
+        width: 250px;
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
+}
+
+.section5{
+    display: none;
+}
+
+
+.loginandicons .fa-cart-arrow-down{
+            display: none;
+        }
+        header{
+            gap: 40px;
+            width: 900px;
+            background-color: white;
+        }
+        .loginandicons .fa-heart{
+            display: none;
+        }
+        .loginandicons h3{
+            display: none;
+        }
+        .dropdown-button span{
+            display: none;
+        }
+        .dropdown-button{
+            width: 50px;
+            justify-content: center;
+        }
+        .searchcontainer input{
+            display: none;
+        }
+        .searchcontainer i{
+            background-color: #F9F7FD;
+            border: none;
+            color: black;
+        }
+        .searchcontainer{
+            background-color: #F9F7FD;
+            width: 50px;
+        }
+        .number1{
+            padding: 20px 70px;
+            width: 900px;
+        }
+        hr{
+            width: 900px;
+        }
+        .section5h1{
+            display: none;
+        }
+}
+
+
+@media(max-width: 1285.60px){
+    .section2{
+        flex-direction: column;
+    }
+    .section2 img{
+        width: 680px;
+    }
+    .section3{
+            width: 900px;
+            flex-wrap: wrap;
+            gap: 30px;
+            width: 100%;
+            div{
+                width: 300px;
+                i{
+                    font-size: 15px;
+                }
+                h3{
+                    font-size: 15px;
+                }
+            }
+        }
+
+        .section4{
+    display: grid;
+    grid-template-columns: 300px 300px 300px;
+    grid-template-rows: auto auto;
+    padding-top: 20px;
+    column-gap: 10px;
+    row-gap: 15px;
+    .img1{
+        width: 300px;
+        grid-column: 1 / 3; 
+        grid-row: 1 / 3; 
+    }
+    .img2{
+        width: 300px;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+    .img3{
+        width: 300px;
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+    }
+    .img4{
+        width: 300px;
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+    .img5{
+        width: 300px;
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
+}
+
+.section5{
+    display: none;
+}
+
+
+.loginandicons .fa-cart-arrow-down{
+            display: none;
+        }
+        header{
+            gap: 40px;
+            width: 900px;
+            background-color: white;
+        }
+        .loginandicons .fa-heart{
+            display: none;
+        }
+        .loginandicons h3{
+            display: none;
+        }
+        .dropdown-button span{
+            display: none;
+        }
+        .dropdown-button{
+            width: 50px;
+            justify-content: center;
+        }
+        .searchcontainer input{
+            display: none;
+        }
+        .searchcontainer i{
+            background-color: #F9F7FD;
+            border: none;
+            color: black;
+        }
+        .searchcontainer{
+            background-color: #F9F7FD;
+            width: 50px;
+        }
+        .number1{
+            padding: 20px 70px;
+            width: 900px;
+        }
+        hr{
+            width: 900px;
+        }
+        .section5h1{
+            display: none;
+        }
+}
+
+@media(min-width: 768px) and (max-width: 1024px){
+    .loginandicons .fa-cart-arrow-down{
+            display: none;
+        }
+        header{
+            gap: 40px;
+            width: 800px;
+        }
+        .loginandicons .fa-heart{
+            display: none;
+        }
+        .loginandicons h3{
+            display: none;
+        }
+        .dropdown-button span{
+            display: none;
+        }
+        .dropdown-button{
+            width: 50px;
+            justify-content: center;
+        }
+        .searchcontainer input{
+            display: none;
+        }
+        .searchcontainer i{
+            background-color: #F9F7FD;
+            border: none;
+            color: black;
+        }
+        .searchcontainer{
+            background-color: #F9F7FD;
+            width: 50px;
+        }
+        .number1{
+            padding: 20px 70px;
+            width: 800px;
+        }
+        .padding{
+            padding: 20px 50px;
+        }
+        .section2{
+            flex-direction: column;
+            img{
+                width: 655px;
+            }
+        }
+        .section3{
+            width: 630px;
+            flex-wrap: wrap;
+            gap: 30px;
+            div{
+                width: 300px;
+                i{
+                    font-size: 15px;
+                }
+                h3{
+                    font-size: 15px;
+                }
+            }
+        }
+        hr{
+            width: 800px;
+        }
+        .section4{
+    display: grid;
+    grid-template-columns: 210px 210px 210px;
+    grid-template-rows: auto auto;
+    padding-top: 20px;
+    column-gap: 10px;
+    row-gap: 15px;
+    .img1{
+        width: 210px;
+        grid-column: 1 / 3; 
+        grid-row: 1 / 3; 
+    }
+    .img2{
+        width: 210px;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+    .img3{
+        width: 210px;
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+    }
+    .img4{
+        width: 210px;
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+    .img5{
+        width: 210px;
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
+
+}
+}
+
+@media(min-width: 1024px) and (max-width: 1100px){
+    .loginandicons .fa-cart-arrow-down{
+            display: none;
+        }
+        header{
+            gap: 40px;
+            width: 900px;
+        }
+        .loginandicons .fa-heart{
+            display: none;
+        }
+        .loginandicons h3{
+            display: none;
+        }
+        .dropdown-button span{
+            display: none;
+        }
+        .dropdown-button{
+            width: 50px;
+            justify-content: center;
+        }
+        .searchcontainer input{
+            display: none;
+        }
+        .searchcontainer i{
+            background-color: #F9F7FD;
+            border: none;
+            color: black;
+        }
+        .searchcontainer{
+            background-color: #F9F7FD;
+            width: 50px;
+        }
+        .number1{
+            padding: 20px 70px;
+            width: 900px;
+        }
+        .padding{
+            padding: 20px 50px;
+        }
+        .section2{
+            flex-direction: column;
+            img{
+                width: 655px;
+            }
+        }
+        .section3{
+            width: 630px;
+            flex-wrap: wrap;
+            gap: 30px;
+            div{
+                width: 300px;
+                i{
+                    font-size: 15px;
+                }
+                h3{
+                    font-size: 15px;
+                }
+            }
+        }
+        hr{
+            width: 900px;
+        }
+        .section4{
+    display: grid;
+    grid-template-columns: 210px 210px 210px;
+    grid-template-rows: auto auto;
+    padding-top: 20px;
+    column-gap: 10px;
+    row-gap: 15px;
+    .img1{
+        width: 210px;
+        grid-column: 1 / 3; 
+        grid-row: 1 / 3; 
+    }
+    .img2{
+        width: 210px;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+    .img3{
+        width: 210px;
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+    }
+    .img4{
+        width: 210px;
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+    .img5{
+        width: 210px;
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
+
+}
+}
+
+@media(min-width: 768px) and (max-width: 815px){
+    .loginandicons .fa-cart-arrow-down{
+            display: none;
+        }
+        header{
+            gap: 40px;
+            width: 780px;
+        }
+        .loginandicons .fa-heart{
+            display: none;
+        }
+        .loginandicons h3{
+            display: none;
+        }
+        .dropdown-button span{
+            display: none;
+        }
+        .dropdown-button{
+            width: 50px;
+            justify-content: center;
+        }
+        .searchcontainer input{
+            display: none;
+        }
+        .searchcontainer i{
+            background-color: #F9F7FD;
+            border: none;
+            color: black;
+        }
+        .searchcontainer{
+            background-color: #F9F7FD;
+            width: 50px;
+        }
+        .number1{
+            padding: 20px 70px;
+            width: 780px;
+        }
+        .padding{
+            padding: 20px 50px;
+        }
+        .section2{
+            flex-direction: column;
+            img{
+                width: 655px;
+            }
+        }
+        .section3{
+            width: 630px;
+            flex-wrap: wrap;
+            gap: 30px;
+            div{
+                width: 300px;
+                i{
+                    font-size: 15px;
+                }
+                h3{
+                    font-size: 15px;
+                }
+            }
+        }
+        hr{
+            width: 780px;
+        }
+        .section4{
+    display: grid;
+    grid-template-columns: 210px 210px 210px;
+    grid-template-rows: auto auto;
+    padding-top: 20px;
+    column-gap: 10px;
+    row-gap: 15px;
+    .img1{
+        width: 210px;
+        grid-column: 1 / 3; 
+        grid-row: 1 / 3; 
+    }
+    .img2{
+        width: 210px;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+    .img3{
+        width: 210px;
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+    }
+    .img4{
+        width: 210px;
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+    .img5{
+        width: 210px;
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
+
 }
 }
