--- a/style.css
+++ b/style.css
@@ -1174,12 +1174,13 @@ footer .main .icons i {
   color: blueviolet;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 600px) and (max-width: 700px) {
   .loginandicons .fa-cart-arrow-down {
     display: none;
   }
   header {
     gap: 40px;
+    width: 600px;
   }
   .loginandicons .fa-heart {
     display: none;
@@ -1208,6 +1209,428 @@ footer .main .icons i {
   }
   .number1 {
     padding: 20px 70px;
+    width: 600px;
+  }
+  .padding {
+    padding: 20px 50px;
+  }
+  .section2 {
+    flex-direction: column;
+  }
+  .section2 img {
+    width: 655px;
+  }
+  .section3 {
+    width: 630px;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .section3 div {
+    width: 300px;
+  }
+  .section3 div i {
+    font-size: 15px;
+  }
+  .section3 div h3 {
+    font-size: 15px;
+  }
+  hr {
+    width: 600px;
+  }
+  .section5 {
+    display: none;
+  }
+  .section5h1 {
+    display: none;
+  }
+  .section4 {
+    display: grid;
+    grid-template-columns: 210px 210px 210px;
+    grid-template-rows: auto auto;
+    padding-top: 20px;
+    column-gap: 10px;
+    row-gap: 15px;
+  }
+  .section4 .img1 {
+    width: 210px;
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+  .section4 .img2 {
+    width: 210px;
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+  .section4 .img3 {
+    width: 210px;
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+  .section4 .img4 {
+    width: 210px;
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .section4 .img5 {
+    width: 210px;
+    grid-column: 3/4;
+    grid-row: 2/3;
+  }
+}
+@media (min-width: 700px) and (max-width: 800px) {
+  .loginandicons .fa-cart-arrow-down {
+    display: none;
+  }
+  header {
+    gap: 40px;
+    width: 700px;
+  }
+  hr {
+    width: 700px;
+  }
+  .number1 {
+    padding: 20px 70px;
+    width: 700px;
+  }
+  .loginandicons .fa-heart {
+    display: none;
+  }
+  .loginandicons h3 {
+    display: none;
+  }
+  .dropdown-button span {
+    display: none;
+  }
+  .dropdown-button {
+    width: 50px;
+    justify-content: center;
+  }
+  .searchcontainer input {
+    display: none;
+  }
+  .searchcontainer i {
+    background-color: #F9F7FD;
+    border: none;
+    color: black;
+  }
+  .searchcontainer {
+    background-color: #F9F7FD;
+    width: 50px;
+  }
+  .padding {
+    padding: 20px 50px;
+  }
+  .section2 {
+    flex-direction: column;
+  }
+  .section2 img {
+    width: 655px;
+  }
+  .section3 {
+    width: 630px;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .section3 div {
+    width: 300px;
+  }
+  .section3 div i {
+    font-size: 15px;
+  }
+  .section3 div h3 {
+    font-size: 15px;
+  }
+  .section5 {
+    display: none;
+  }
+  .section5h1 {
+    display: none;
+  }
+  .section4 {
+    display: grid;
+    grid-template-columns: 210px 210px 210px;
+    grid-template-rows: auto auto;
+    padding-top: 20px;
+    column-gap: 10px;
+    row-gap: 15px;
+  }
+  .section4 .img1 {
+    width: 210px;
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+  .section4 .img2 {
+    width: 210px;
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+  .section4 .img3 {
+    width: 210px;
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+  .section4 .img4 {
+    width: 210px;
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .section4 .img5 {
+    width: 210px;
+    grid-column: 3/4;
+    grid-row: 2/3;
+  }
+}
+@media (min-width: 800px) and (max-width: 900px) {
+  .loginandicons .fa-cart-arrow-down {
+    display: none;
+  }
+  header {
+    gap: 40px;
+    width: 800px;
+  }
+  hr {
+    width: 800px;
+  }
+  .number1 {
+    padding: 20px 70px;
+    width: 800px;
+  }
+  .loginandicons .fa-heart {
+    display: none;
+  }
+  .loginandicons h3 {
+    display: none;
+  }
+  .dropdown-button span {
+    display: none;
+  }
+  .dropdown-button {
+    width: 50px;
+    justify-content: center;
+  }
+  .searchcontainer input {
+    display: none;
+  }
+  .searchcontainer i {
+    background-color: #F9F7FD;
+    border: none;
+    color: black;
+  }
+  .searchcontainer {
+    background-color: #F9F7FD;
+    width: 50px;
+  }
+  .padding {
+    padding: 20px 50px;
+  }
+  .section2 {
+    flex-direction: column;
+  }
+  .section2 img {
+    width: 655px;
+  }
+  .section5 {
+    display: none;
+  }
+  .section5h1 {
+    display: none;
+  }
+  .section3 {
+    width: 630px;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .section3 div {
+    width: 300px;
+  }
+  .section3 div i {
+    font-size: 15px;
+  }
+  .section3 div h3 {
+    font-size: 15px;
+  }
+  .section4 {
+    display: grid;
+    grid-template-columns: 210px 210px 210px;
+    grid-template-rows: auto auto;
+    padding-top: 20px;
+    column-gap: 10px;
+    row-gap: 15px;
+  }
+  .section4 .img1 {
+    width: 210px;
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+  .section4 .img2 {
+    width: 210px;
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+  .section4 .img3 {
+    width: 210px;
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+  .section4 .img4 {
+    width: 210px;
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .section4 .img5 {
+    width: 210px;
+    grid-column: 3/4;
+    grid-row: 2/3;
+  }
+}
+@media (min-width: 900px) and (max-width: 1000px) {
+  .loginandicons .fa-cart-arrow-down {
+    display: none;
+  }
+  header {
+    gap: 40px;
+    width: 900px;
+  }
+  hr {
+    width: 900px;
+  }
+  .number1 {
+    padding: 20px 70px;
+    width: 900px;
+  }
+  .loginandicons .fa-heart {
+    display: none;
+  }
+  .loginandicons h3 {
+    display: none;
+  }
+  .dropdown-button span {
+    display: none;
+  }
+  .dropdown-button {
+    width: 50px;
+    justify-content: center;
+  }
+  .searchcontainer input {
+    display: none;
+  }
+  .searchcontainer i {
+    background-color: #F9F7FD;
+    border: none;
+    color: black;
+  }
+  .searchcontainer {
+    background-color: #F9F7FD;
+    width: 50px;
+  }
+  .padding {
+    padding: 20px 50px;
+  }
+  .section2 {
+    flex-direction: column;
+  }
+  .section2 img {
+    width: 655px;
+  }
+  .section3 {
+    width: 630px;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .section3 div {
+    width: 300px;
+  }
+  .section3 div i {
+    font-size: 15px;
+  }
+  .section3 div h3 {
+    font-size: 15px;
+  }
+  .section5 {
+    display: none;
+  }
+  .section5h1 {
+    display: none;
+  }
+  .section4 {
+    display: grid;
+    grid-template-columns: 210px 210px 210px;
+    grid-template-rows: auto auto;
+    padding-top: 20px;
+    column-gap: 10px;
+    row-gap: 15px;
+  }
+  .section4 .img1 {
+    width: 210px;
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+  .section4 .img2 {
+    width: 210px;
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+  .section4 .img3 {
+    width: 210px;
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+  .section4 .img4 {
+    width: 210px;
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .section4 .img5 {
+    width: 210px;
+    grid-column: 3/4;
+    grid-row: 2/3;
+  }
+}
+@media (min-width: 1000px) and (max-width: 1100px) {
+  .loginandicons .fa-cart-arrow-down {
+    display: none;
+  }
+  .section5 {
+    display: none;
+  }
+  .section5h1 {
+    display: none;
+  }
+  header {
+    gap: 40px;
+    width: 1000px;
+  }
+  hr {
+    width: 1000px;
+  }
+  .number1 {
+    padding: 20px 70px;
+    width: 1000px;
+  }
+  .loginandicons .fa-heart {
+    display: none;
+  }
+  .loginandicons h3 {
+    display: none;
+  }
+  .dropdown-button span {
+    display: none;
+  }
+  .dropdown-button {
+    width: 50px;
+    justify-content: center;
+  }
+  .searchcontainer input {
+    display: none;
+  }
+  .searchcontainer i {
+    background-color: #F9F7FD;
+    border: none;
+    color: black;
+  }
+  .searchcontainer {
+    background-color: #F9F7FD;
+    width: 50px;
   }
   .padding {
     padding: 20px 50px;
@@ -1265,220 +1688,33 @@ footer .main .icons i {
     grid-column: 3/4;
     grid-row: 2/3;
   }
-  .brands {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    align-items: center;
-    margin-bottom: 70px;
-    width: 100%;
+  .section4 .section5 {
+    display: none;
   }
-  .brands div {
-    width: 200px;
-    height: 70px;
-    border: 3px solid #6e5494;
-    border-top-right-radius: 30px;
-    border-bottom-left-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: white;
-    position: relative;
-    overflow: hidden;
-    justify-content: center;
-    margin-left: 0;
-    flex-wrap: wrap;
-    gap: 20px;
+  .section4 .section5h1 {
+    display: none;
   }
-  .brands div .applediv {
-    display: flex;
-    justify-content: center;
+}
+@media (min-width: 1100px) and (max-width: 1200px) {
+  .loginandicons .fa-cart-arrow-down {
+    display: none;
   }
-  .brands div .apple {
-    width: 30px;
-  }
-  .brands div img {
-    width: 50px;
-  }
-  footer {
-    flex-wrap: wrap;
-    font-size: 15px;
-    padding: 20px 20px;
+  .section5 {
+    display: none;
   }
   .section5h1 {
     display: none;
   }
-  .section5 {
-    display: none;
-  }
-}
-@media (max-width: 1024px) {
-  .section2 {
-    flex-direction: column;
-  }
-  .section2 img {
-    width: 680px;
-  }
-  .section3 {
-    width: 900px;
-    flex-wrap: wrap;
-    gap: 30px;
-    width: 100%;
-  }
-  .section3 div {
-    width: 300px;
-  }
-  .section3 div i {
-    font-size: 15px;
-  }
-  .section3 div h3 {
-    font-size: 15px;
-  }
-  .section4 {
-    display: grid;
-    grid-template-columns: 170px 170px 170px;
-    grid-template-rows: auto auto;
-    padding-top: 20px;
-    column-gap: 10px;
-    row-gap: 15px;
-  }
-  .section4 .img1 {
-    width: 170px;
-    grid-column: 1/3;
-    grid-row: 1/3;
-  }
-  .section4 .img2 {
-    width: 170px;
-    grid-column: 2/3;
-    grid-row: 1/2;
-  }
-  .section4 .img3 {
-    width: 170px;
-    grid-column: 3/4;
-    grid-row: 1/2;
-  }
-  .section4 .img4 {
-    width: 170px;
-    grid-column: 2/3;
-    grid-row: 2/3;
-  }
-  .section4 .img5 {
-    width: 170px;
-    grid-column: 3/4;
-    grid-row: 2/3;
-  }
-  .section5 {
-    display: none;
-  }
-  .loginandicons .fa-cart-arrow-down {
-    display: none;
-  }
   header {
     gap: 40px;
-    width: 900px;
-    background-color: white;
-  }
-  .loginandicons .fa-heart {
-    display: none;
-  }
-  .loginandicons h3 {
-    display: none;
-  }
-  .dropdown-button span {
-    display: none;
-  }
-  .dropdown-button {
-    width: 50px;
-    justify-content: center;
-  }
-  .searchcontainer input {
-    display: none;
-  }
-  .searchcontainer i {
-    background-color: #F9F7FD;
-    border: none;
-    color: black;
-  }
-  .searchcontainer {
-    background-color: #F9F7FD;
-    width: 50px;
-  }
-  .number1 {
-    padding: 20px 70px;
-    width: 900px;
+    width: 1100px;
   }
   hr {
-    width: 900px;
+    width: 1100px;
   }
-  .section5h1 {
-    display: none;
-  }
-}
-@media (max-width: 1200px) {
-  .section2 {
-    flex-direction: column;
-  }
-  .section2 img {
-    width: 900px;
-  }
-  .section3 {
-    width: 900px;
-    flex-wrap: wrap;
-    gap: 30px;
-    width: 100%;
-  }
-  .section3 div {
-    width: 300px;
-  }
-  .section3 div i {
-    font-size: 15px;
-  }
-  .section3 div h3 {
-    font-size: 15px;
-  }
-  .section4 {
-    display: grid;
-    grid-template-columns: 250px 250px 250px;
-    grid-template-rows: auto auto;
-    padding-top: 20px;
-    column-gap: 10px;
-    row-gap: 15px;
-  }
-  .section4 .img1 {
-    width: 250px;
-    grid-column: 1/3;
-    grid-row: 1/3;
-  }
-  .section4 .img2 {
-    width: 250px;
-    grid-column: 2/3;
-    grid-row: 1/2;
-  }
-  .section4 .img3 {
-    width: 250px;
-    grid-column: 3/4;
-    grid-row: 1/2;
-  }
-  .section4 .img4 {
-    width: 250px;
-    grid-column: 2/3;
-    grid-row: 2/3;
-  }
-  .section4 .img5 {
-    width: 250px;
-    grid-column: 3/4;
-    grid-row: 2/3;
-  }
-  .section5 {
-    display: none;
-  }
-  .loginandicons .fa-cart-arrow-down {
-    display: none;
-  }
-  header {
-    gap: 40px;
-    width: 900px;
-    background-color: white;
+  .number1 {
+    padding: 20px 70px;
+    width: 1100px;
   }
   .loginandicons .fa-heart {
     display: none;
@@ -1504,156 +1740,6 @@ footer .main .icons i {
   .searchcontainer {
     background-color: #F9F7FD;
     width: 50px;
-  }
-  .number1 {
-    padding: 20px 70px;
-    width: 900px;
-  }
-  hr {
-    width: 900px;
-  }
-  .section5h1 {
-    display: none;
-  }
-}
-@media (max-width: 1285.6px) {
-  .section2 {
-    flex-direction: column;
-  }
-  .section2 img {
-    width: 680px;
-  }
-  .section3 {
-    width: 900px;
-    flex-wrap: wrap;
-    gap: 30px;
-    width: 100%;
-  }
-  .section3 div {
-    width: 300px;
-  }
-  .section3 div i {
-    font-size: 15px;
-  }
-  .section3 div h3 {
-    font-size: 15px;
-  }
-  .section4 {
-    display: grid;
-    grid-template-columns: 300px 300px 300px;
-    grid-template-rows: auto auto;
-    padding-top: 20px;
-    column-gap: 10px;
-    row-gap: 15px;
-  }
-  .section4 .img1 {
-    width: 300px;
-    grid-column: 1/3;
-    grid-row: 1/3;
-  }
-  .section4 .img2 {
-    width: 300px;
-    grid-column: 2/3;
-    grid-row: 1/2;
-  }
-  .section4 .img3 {
-    width: 300px;
-    grid-column: 3/4;
-    grid-row: 1/2;
-  }
-  .section4 .img4 {
-    width: 300px;
-    grid-column: 2/3;
-    grid-row: 2/3;
-  }
-  .section4 .img5 {
-    width: 300px;
-    grid-column: 3/4;
-    grid-row: 2/3;
-  }
-  .section5 {
-    display: none;
-  }
-  .loginandicons .fa-cart-arrow-down {
-    display: none;
-  }
-  header {
-    gap: 40px;
-    width: 900px;
-    background-color: white;
-  }
-  .loginandicons .fa-heart {
-    display: none;
-  }
-  .loginandicons h3 {
-    display: none;
-  }
-  .dropdown-button span {
-    display: none;
-  }
-  .dropdown-button {
-    width: 50px;
-    justify-content: center;
-  }
-  .searchcontainer input {
-    display: none;
-  }
-  .searchcontainer i {
-    background-color: #F9F7FD;
-    border: none;
-    color: black;
-  }
-  .searchcontainer {
-    background-color: #F9F7FD;
-    width: 50px;
-  }
-  .number1 {
-    padding: 20px 70px;
-    width: 900px;
-  }
-  hr {
-    width: 900px;
-  }
-  .section5h1 {
-    display: none;
-  }
-}
-@media (min-width: 768px) and (max-width: 1024px) {
-  .loginandicons .fa-cart-arrow-down {
-    display: none;
-  }
-  header {
-    gap: 40px;
-    width: 800px;
-  }
-  .loginandicons .fa-heart {
-    display: none;
-  }
-  .loginandicons h3 {
-    display: none;
-  }
-  .dropdown-button span {
-    display: none;
-  }
-  .dropdown-button {
-    width: 50px;
-    justify-content: center;
-  }
-  .searchcontainer input {
-    display: none;
-  }
-  .searchcontainer i {
-    background-color: #F9F7FD;
-    border: none;
-    color: black;
-  }
-  .searchcontainer {
-    background-color: #F9F7FD;
-    width: 50px;
-  }
-  .number1 {
-    padding: 20px 70px;
-    width: 800px;
   }
   .padding {
     padding: 20px 50px;
@@ -1677,9 +1763,6 @@ footer .main .icons i {
   }
   .section3 div h3 {
     font-size: 15px;
-  }
-  hr {
-    width: 800px;
   }
   .section4 {
     display: grid;
@@ -1715,13 +1798,26 @@ footer .main .icons i {
     grid-row: 2/3;
   }
 }
-@media (min-width: 1024px) and (max-width: 1100px) {
+@media (min-width: 1200px) and (max-width: 1300px) {
   .loginandicons .fa-cart-arrow-down {
+    display: none;
+  }
+  .section5 {
+    display: none;
+  }
+  .section5h1 {
     display: none;
   }
   header {
     gap: 40px;
-    width: 900px;
+    width: 1200px;
+  }
+  hr {
+    width: 1200px;
+  }
+  .number1 {
+    padding: 20px 70px;
+    width: 1200px;
   }
   .loginandicons .fa-heart {
     display: none;
@@ -1748,10 +1844,6 @@ footer .main .icons i {
     background-color: #F9F7FD;
     width: 50px;
   }
-  .number1 {
-    padding: 20px 70px;
-    width: 900px;
-  }
   .padding {
     padding: 20px 50px;
   }
@@ -1774,106 +1866,6 @@ footer .main .icons i {
   }
   .section3 div h3 {
     font-size: 15px;
-  }
-  hr {
-    width: 900px;
-  }
-  .section4 {
-    display: grid;
-    grid-template-columns: 210px 210px 210px;
-    grid-template-rows: auto auto;
-    padding-top: 20px;
-    column-gap: 10px;
-    row-gap: 15px;
-  }
-  .section4 .img1 {
-    width: 210px;
-    grid-column: 1/3;
-    grid-row: 1/3;
-  }
-  .section4 .img2 {
-    width: 210px;
-    grid-column: 2/3;
-    grid-row: 1/2;
-  }
-  .section4 .img3 {
-    width: 210px;
-    grid-column: 3/4;
-    grid-row: 1/2;
-  }
-  .section4 .img4 {
-    width: 210px;
-    grid-column: 2/3;
-    grid-row: 2/3;
-  }
-  .section4 .img5 {
-    width: 210px;
-    grid-column: 3/4;
-    grid-row: 2/3;
-  }
-}
-@media (min-width: 768px) and (max-width: 815px) {
-  .loginandicons .fa-cart-arrow-down {
-    display: none;
-  }
-  header {
-    gap: 40px;
-    width: 780px;
-  }
-  .loginandicons .fa-heart {
-    display: none;
-  }
-  .loginandicons h3 {
-    display: none;
-  }
-  .dropdown-button span {
-    display: none;
-  }
-  .dropdown-button {
-    width: 50px;
-    justify-content: center;
-  }
-  .searchcontainer input {
-    display: none;
-  }
-  .searchcontainer i {
-    background-color: #F9F7FD;
-    border: none;
-    color: black;
-  }
-  .searchcontainer {
-    background-color: #F9F7FD;
-    width: 50px;
-  }
-  .number1 {
-    padding: 20px 70px;
-    width: 780px;
-  }
-  .padding {
-    padding: 20px 50px;
-  }
-  .section2 {
-    flex-direction: column;
-  }
-  .section2 img {
-    width: 655px;
-  }
-  .section3 {
-    width: 630px;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
-  .section3 div {
-    width: 300px;
-  }
-  .section3 div i {
-    font-size: 15px;
-  }
-  .section3 div h3 {
-    font-size: 15px;
-  }
-  hr {
-    width: 780px;
   }
   .section4 {
     display: grid;
